# furry-emblem

./: Cargo.toml  README.md  example.lua
example-game/: fe-project.toml  femap.ldtk
example-game/classes/: Cat.class.toml  Dog.class.toml  Dragon.class.toml  cat.class.toml  dog.class.toml
example-game/items/: Apple.item.toml  Iron Sword.item.toml  Iron Sword.toml  Steel Sword.item.toml  apple.toml  iron_sword.item.toml
example-game/maps/: Example.map.toml
example-game/tilesets/: Tileset.tileset.toml
example-game/units/: Luvui.unit.toml
fe-data/: Cargo.toml
fe-data/examples/: item_output.rs
fe-data/src/: class.rs  containers.rs  items.rs  lib.rs  map.rs  stats.rs  unit.rs
fe-data/src/containers/: mod.rs
fe-editor/: Cargo.toml  README.md
fe-editor/src/: app.rs  close_handler.rs  editors.rs  file_dialogue.rs  lib.rs  main.rs  menu_bar.rs  new_file_window.rs  project.rs
fe-editor/src/editors/: class.rs  item.rs  map.rs  mod.rs  tileset.rs  unit.rs
fe-engine/: Cargo.toml
fe-engine/src/: cursor.rs  direction.rs  input.rs  lib.rs  main.rs  module.rs  ppcanvas.rs
stata/: Cargo.toml
stata-macros/: Cargo.toml
stata-macros/src/: lib.rs
stata-usage/: Cargo.toml  build.rs
stata-usage/src/: main.rs
stata/src/: lib.rs
