[package]
name = "fe-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", features = ["serde"] }
serde = { version = "1.0.174", features = ["derive"] }
sucrose = { workspace = true, optional = true }

[dev-dependencies]
toml = "0.7.6"
