[package]
name = "fe-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = { git = "https://github.com/eievui5/grid", features = ["serde"] }
image = { version = "0.24.7", optional = true }
serde = { version = "1.0.174", features = ["derive"] }
sucrose = { workspace = true, optional = true }
thiserror = { version = "1.0.48", optional = true }

[dev-dependencies]
toml = "0.7.7"

[features]
runtime = ["dep:image", "dep:thiserror"]
