[package]
name = "fe-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
fe-data = { path = "../fe-data" }

egui_file = "0.10.0"
eframe = "0.22.0"
egui = "0.22.0"
native-dialog = "0.6.4"
toml = "0.7.6"
anyhow = "1.0.72"
uuid = { version = "1.4.1", features = ["v4"] }
paste = "1.0.14"
quote = "1.0.32"

