[package]
name = "fe-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
fe-data = { workspace = true }

egui_file = "0.10.0"
eframe = "0.22.0"
egui = "0.22.0"
toml = "0.7.6"
anyhow = "1.0.72"
uuid = { version = "1.4.1", features = ["v4"] }
paste = "1.0.14"
egui-toast = "0.8.0"
serde = "1.0.176"
thiserror = "1.0.44"
egui_extras = { version = "0.22.0", features = ["image"] }

