[package]
name = "fe-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
fe-data = { workspace = true, features = ["runtime"] }

anyhow = "1.0.72"
eframe = "0.22.0"
egui = "0.22.0"
egui-toast = "0.8.0"
egui_extras = { version = "0.22.0", features = ["image"] }
egui_file = "0.10.0"
image = "0.24.7"
notify = "6.0.1"
paste = "1.0.14"
pathdiff = "0.2.1"
rfd = { version = "0.11.4",  default-features = false, features = ["xdg-portal"] }
serde = "1.0.176"
thiserror = "1.0.44"
toml = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
