[package]
name = "fe-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = "0.11.2"
convert_case = "0.6.0"
fe-data = { workspace = true, features = ["runtime"] }
image = "0.24.7"
log = "0.4.20"
serde = { version = "1.0.185", features = ["derive"] }
simplelog = "0.12.1"
thiserror = "1.0.47"
toml = "0.7.6"
winit = "0.28.6"

[build-dependencies]
anyhow = "1.0.75"
convert_case = "0.6.0"
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
